unpackaged/main/default/objects/nbavs__Group__c/fields/nbavs__Email__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>