unpackaged/main/default/objects/nbavs__Group__c/fields/nbavs__Extension__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Extension__c</fullName>
    <label>Extension</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>