unpackaged/main/default/objects/nbavs__Group__c/fields/nbavs__GroupPickup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__GroupPickup__c</fullName>
    <formula>&#39;*6&#39; +  nbavs__Extension__c</formula>
    <label>Group Pickup</label>
    <type>Text</type>
</CustomField>