unpackaged/main/default/objects/nbavs__Group__c/fields/nbavs__Manager__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact Centre: grants group access to Listen In, Call Queues, Group Dial</description>
    <inlineHelpText>Contact Centre: grants group access to Listen In, Call Queues, Group Dial</inlineHelpText>
    <label>Contact Centre</label>
    <type>Checkbox</type>
</CustomField>