unpackaged/main/default/objects/nbavs__Group__c/fields/nbavs__PBX__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PBX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cloud PBX: grants group access to Listen In, Group Pickup, Group Dial</description>
    <inlineHelpText>Cloud PBX: grants group access to Listen In, Group Pickup, Group Dial</inlineHelpText>
    <label>Cloud PBX</label>
    <type>Checkbox</type>
</CustomField>