unpackaged/main/default/objects/nbavs__Group__c/fields/nbavs__Record__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record: grants group access to listening to call recordings</description>
    <inlineHelpText>Record: grants group access to listening to call recordings</inlineHelpText>
    <label>Record</label>
    <type>Checkbox</type>
</CustomField>